--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ pydantic==2.6.4
 pydantic_core==2.16.3
 Pygments @ file:///private/tmp/pygments-20231121-5079-e7uuzt/pygments-2.17.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 regex==2023.12.25
