--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^16.6.0",
+    "@heroicons/react": "^2.1.3",
     "country-flag-icons": "^1.5.10",
     "next": "14.1.4",
     "react": "^18",
