--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ scipy==1.12.0
 sentence-transformers==2.6.1
 six==1.16.0
 sniffio==1.3.1
+SQLAlchemy==2.0.29
 starlette==0.36.3
 sympy==1.12
 tenacity==8.2.3
