--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,12 @@ attrs==23.2.0
 backoff==2.2.1
 boilerpy3==1.0.7
 Brotli==1.1.0
-certifi @ file:///private/tmp/certifi-20240307-4614-15z07l/certifi-2024.2.2
+certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 click @ file:///private/tmp/python-click-20231113-5273-1n9fjmk/click-8.1.7
 distro==1.9.0
+docstring-parser==0.15
 fastapi==0.110.0
 filelock==3.13.3
 frozenlist==1.4.1
@@ -22,14 +23,17 @@ greenlet==3.0.3
 h11==0.14.0
 haystack-ai==2.0.0
 haystack-bm25==1.0.2
-httpcore==1.0.4
+httpcore==1.0.5
 httpx==0.27.0
 huggingface-hub==0.22.2
 idna==3.6
+instructor==0.6.8
 Jinja2==3.1.3
 joblib==1.3.2
 lazy-imports==0.3.1
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+mdurl==0.1.2
 monotonic==1.6
 more-itertools==10.2.0
 mpmath==1.3.0
@@ -54,6 +58,7 @@ pytz==2024.1
 PyYAML==6.0.1
 regex==2023.12.25
 requests==2.31.0
+rich==13.7.1
 safetensors==0.4.2
 scikit-learn==1.4.1.post1
 scipy==1.12.0
@@ -69,7 +74,8 @@ tokenizers==0.15.2
 torch==2.2.2
 tqdm==4.66.2
 transformers==4.39.2
-typing_extensions @ file:///private/tmp/python-typing-extensions-20231008-5404-1unbk9z/typing_extensions-4.8.0
+typer==0.9.4
+typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
 uvicorn==0.29.0
