--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiodns==3.1.1
 aiohttp==3.9.3
 aiosignal==1.3.1
+aiounittest==1.4.2
 annotated-types==0.6.0
 anyio==4.3.0
 async-timeout==4.0.3
@@ -27,6 +28,7 @@ httpcore==1.0.5
 httpx==0.27.0
 huggingface-hub==0.22.2
 idna==3.6
+iniconfig==2.0.0
 instructor==0.6.8
 Jinja2==3.1.3
 joblib==1.3.2
@@ -44,6 +46,7 @@ openai==1.14.3
 packaging @ file:///private/tmp/python-packaging-20231018-5228-nhvg0j/packaging-23.2
 pandas==2.2.1
 pillow==10.2.0
+pluggy==1.4.0
 posthog==3.5.0
 protobuf==4.23.4
 psycopg2-binary==2.9.9
@@ -52,6 +55,8 @@ pycparser==2.22
 pydantic==2.6.4
 pydantic_core==2.16.3
 Pygments @ file:///private/tmp/pygments-20231121-5079-e7uuzt/pygments-2.17.2
+pytest==8.1.1
+pytest-asyncio==0.23.6
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
@@ -79,4 +84,5 @@ typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
 uvicorn==0.29.0
+wrapt==1.16.0
 yarl==1.9.4
