--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-click-away-listener": "^2.2.3",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tw-elements": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
