--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "private": true,
     "dependencies": {},
     "scripts": {
-      "dev": "env $(cat ../.env | xargs) uvicorn main:app --reload"
+      "dev": "env $(cat ../.env | xargs) uvicorn main:app --reload",
+      "install": "pip install -r requirements.txt"
     }
   }
   
